Refactor: extract SQL to dedicated classes, move annotations to own package, fix activation ID sequence