@@ -45,25 +45,36 @@ class OverviewServiceTest {
                 new StatusCount("draft", 12),
                 new StatusCount("archived", 10)));
 
+        String expectedTopName = "Auto Intenders";
+        long expectedTopAudience = 4_018_500L;
         var topSegments = List.of(
                 Instancio.of(Segment.class)
-                        .set(Select.field(Segment::getId), "seg_0004")
-                        .set(Select.field(Segment::getName), "Auto Intenders")
-                        .set(Select.field(Segment::getAudienceSize), 4_018_500L)
+                        .set(Select.field(Segment::id), "seg_0004")
+                        .set(Select.field(Segment::name), expectedTopName)
+                        .set(Select.field(Segment::audienceSize), expectedTopAudience)
                         .create());
         when(segmentDao.findTopByAudienceSize(5)).thenReturn(topSegments);
 
         var result = service.getOverview();
 
-        assertEquals(29_013_000L, result.kpis().totalProfiles());
-        assertEquals(36, result.kpis().totalSegments());
-        assertEquals(14, result.kpis().activeSegments());
-        assertEquals(new BigDecimal("0.701"), result.kpis().avgMatchRate());
-        assertEquals(19, result.kpis().totalActivations());
-        assertEquals(3, result.segmentsByStatus().size());
-        assertEquals(14, result.segmentsByStatus().get("active"));
-        assertEquals(1, result.topSegments().size());
-        assertEquals("Auto Intenders", result.topSegments().get(0).name());
+        assertEquals(29_013_000L, result.kpis().totalProfiles(), "total profiles across all data sources");
+        assertEquals(36, result.kpis().totalSegments(), "total segment count");
+        assertEquals(14, result.kpis().activeSegments(), "active segments count");
+        assertEquals(new BigDecimal("0.701"), result.kpis().avgMatchRate(), "average match rate");
+        assertEquals(19, result.kpis().totalActivations(), "total activations count");
+        assertEquals(3, result.segmentsByStatus().size(), "three distinct status groups");
+        assertEquals(14, result.segmentsByStatus().get("active"), "active segments in status breakdown");
+        assertEquals(1, result.topSegments().size(), "single top segment returned");
+        assertEquals(expectedTopName, result.topSegments().getFirst().name(), "top segment name matches expected");
+
+        verify(dataSourceDao).sumProfilesCount();
+        verify(segmentDao).count();
+        verify(segmentDao).countByStatus("active");
+        verify(segmentDao).averageMatchRate();
+        verify(activationDao).count();
+        verify(segmentDao).countGroupByStatus();
+        verify(segmentDao).findTopByAudienceSize(5);
+        verifyNoMoreInteractions(dataSourceDao, segmentDao, activationDao);
     }
 
     @Test
@@ -78,9 +89,17 @@ class OverviewServiceTest {
 
         var result = service.getOverview();
 
-        assertEquals(0L, result.kpis().totalProfiles());
-        assertEquals(0, result.kpis().totalSegments());
-        assertEquals(0L, result.kpis().identitiesResolved());
-        assertTrue(result.topSegments().isEmpty());
+        assertEquals(0L, result.kpis().totalProfiles(), "zero profiles when no data sources");
+        assertEquals(0, result.kpis().totalSegments(), "zero segments when empty");
+        assertTrue(result.topSegments().isEmpty(), "empty top segments when no data");
+
+        verify(dataSourceDao).sumProfilesCount();
+        verify(segmentDao).count();
+        verify(segmentDao).countByStatus("active");
+        verify(segmentDao).averageMatchRate();
+        verify(activationDao).count();
+        verify(segmentDao).countGroupByStatus();
+        verify(segmentDao).findTopByAudienceSize(5);
+        verifyNoMoreInteractions(dataSourceDao, segmentDao, activationDao);
     }
 }
